Edited for mobile

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <title>fontys OIM</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="animations.css">
 </head>
 <body>
 <nav>
     <ul>
-        <li><a href="#home">Home</a> </li>
-        <li><a href="#testimonials">Testimonials</a> </li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#testimonials">Testimonials</a></li>
+        <li><a href="#feed">#fontysmedia</a> </li>
+        <li><a href="#curriculum">Curriculum</a> </li>
     </ul>
 </nav>
 <div class="header" id="home">
@@ -22,16 +25,85 @@
 
 <div class="container" id="testimonials">
     <div class="row">
-        <div class="col-1 offset-4">
-            <h2>Test fdsdajvb </h2>
+        <div class="col-3">
+            <div class="thumb-container">
+                <img class="img-responsive img-rounded"
+                     src="img/person-placeholder-male.jpg">
+            </div>
+            <div class="text-center">
+                <h3>Thijs van Gerwen</h3>
+                <h5>Leraar ICT&amp;M</h5>
+                <p>Wij leren studenten hier niet hoe zij een website moeten maken, wij leren studenten hoe te denken als een ontwerper</p>
+            </div>
+
         </div>
-        <div class="col-12">
-            <h2>ger vnfcges dvcmdhvgmdcgmvrcmes</h2>
+        <div class="col-3">
+            <div class="thumb-container">
+                <img class="img-responsive img-rounded"
+                    src="img/person-placeholder-male.jpg">
+            </div>
+            <div class="text-center">
+                <h3>Thijs van Gerwen</h3>
+                <h5>Leraar ICT&amp;M</h5>
+                <p>Wij leren studenten hier niet hoe zij een website moeten maken, wij leren studenten hoe te denken als een ontwerper</p>
+            </div>
+
+        </div>
+        <div class="col-3">
+            <div class="thumb-container">
+                <img class="img-responsive img-rounded"
+                    src="img/person-placeholder-male.jpg">
+            </div>
+            <div class="text-center">
+                <h3>Thijs van Gerwen</h3>
+                <h5>Leraar ICT&amp;M</h5>
+                <p>Wij leren studenten hier niet hoe zij een website moeten maken, wij leren studenten hoe te denken als een ontwerper</p>
+            </div>
+
+        </div>
+        <div class="col-3">
+            <div class="thumb-container">
+                <img class="img-responsive img-rounded"
+                    src="img/person-placeholder-male.jpg">
+            </div>
+            <div class="text-center">
+                <h3>Thijs van Gerwen</h3>
+                <h5>Leraar ICT&amp;M</h5>
+                <p>Wij leren studenten hier niet hoe zij een website moeten maken, wij leren studenten hoe te denken als een ontwerper</p>
+            </div>
         </div>
     </div>
 </div>
 
-<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+<div class="interlude">
+
+</div>
+
+<div class="container" id="feed">
+    <div class="row">
+        <div class="col-6 offset-3 text-center">
+            <a class="twitter-timeline"  href="https://twitter.com/hashtag/fontysmedia" data-widget-id="510356443917074432">#fontysmedia Tweets</a>
+        </div>
+    </div>
+</div>
+
+<div class="interlude">
+
+</div>
+
+<div class="container" id="curriculum">
+    <div class="row">
+        <div class="col-12">
+            <h1 class="text-center">Het Curriculum</h1>
+        </div>
+    </div>
+</div>
+
+
+<div class="footer">
+    <p><a href="http://www.terarion.com">Ontworpen door David Diks, in opdracht van afdeling ICT en Media op Fontys Hogescholen</a></p>
+   </div>
+<script src="jquery.js"></script>
 <script>
     $(function () {
         $('a[href*=#]:not([href=#])').click(function () {
@@ -49,5 +121,8 @@
         });
     });
 </script>
+
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
 </body>
 </html>
