Rewritten from CSS to LESS
Minified all assets

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="animations.css">
 </head>
 <body>
@@ -103,7 +103,7 @@
 <div class="footer">
     <p><a href="http://www.terarion.com">Ontworpen door David Diks, in opdracht van afdeling ICT en Media op Fontys Hogescholen</a></p>
    </div>
-<script src="jquery.js"></script>
+<script src="js/jquery.min.js"></script>
 <script>
     $(function () {
         $('a[href*=#]:not([href=#])').click(function () {
