Darkened navbar hover effect
removed animations.css from base folder

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<link rel="stylesheet" href="css/style.min.css">
-	<link rel="stylesheet" href="animations.css">
+	<link rel="stylesheet" href="css/animations.min.css">
 </head>
 <body>
 
@@ -24,7 +24,7 @@
 	</nav>
 
 
-	<div class="header" id="home">
+	<div class="header animation-target" id="home">
 		<div class="header-inside animation-target">
 			<h1>Fontys OIM</h1>
 		</div>
