--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 		<p><a href="http://www.terarion.com">Ontworpen door David Diks, in opdracht van afdeling ICT en Media op Fontys
 		                                     Hogescholen</a></p>
 	</div>
-	<script src="js/jquery.min.js" async></script>
-	<script async>
+	<script src="js/jquery.min.js"></script>
+	<script>
 		$(function () {
 			$('a[href*=#]:not([href=#])').click(function () {
 				if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
@@ -143,7 +143,7 @@
 		});
 	</script>
 
-	<script async>
+	<script>
 		!function (d, s, id) {
 			var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
 			if (!d.getElementById(id)) {
