--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<link rel="stylesheet" href="css/style.min.css">
-	<link rel="stylesheet" href="css/animations.min.css">
+	<link rel="shortcut icon" href="favicon.ico" >
 </head>
 <body>
 
@@ -124,6 +124,9 @@
 		<p><a href="http://www.terarion.com">Ontworpen door David Diks, in opdracht van afdeling ICT en Media op Fontys
 		                                     Hogescholen</a></p>
 	</div>
+
+	<link rel="stylesheet" href="css/animations.min.css">
+
 	<script src="js/jquery.min.js"></script>
 	<script>
 		$(function () {
