--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="css/animations.min.css">
 	<link rel="shortcut icon" href="favicon.ico" >
 </head>
 <body>
@@ -123,9 +124,9 @@
 	<div class="footer">
 		<p><a href="http://www.terarion.com">Ontworpen door David Diks, in opdracht van afdeling ICT en Media op Fontys
 		                                     Hogescholen</a></p>
-	</div>
 
-	<link rel="stylesheet" href="css/animations.min.css">
+		<p>Deze site is geschreven met LESS, YUI-compressor en jQuery. HTML en CSS is gemaakt door mijzelf</p>
+	</div>
 
 	<script src="js/jquery.min.js"></script>
 	<script>
@@ -140,6 +141,10 @@
 							scrollTop: target.offset().top
 						}, 1000);
 						return false;
+					}
+					else
+					{
+						return true;
 					}
 				}
 			});
