--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="stylesheet" href="css/animations.min.css">
-	<link rel="shortcut icon" href="favicon.ico" >
+	<link rel="shortcut icon" href="img/assets/favicon.ico" >
 </head>
 <body>
 
@@ -36,7 +36,7 @@
 			<div class="col-3">
 				<div class="thumb-container">
 					<img class="img-responsive img-rounded"
-					     src="img/person-placeholder-male.jpg">
+					     src="img/assets/person-placeholder-male.jpg">
 				</div>
 				<div class="text-center">
 					<h3>Thijs van Gerwen</h3>
@@ -51,7 +51,7 @@
 			<div class="col-3">
 				<div class="thumb-container">
 					<img class="img-responsive img-rounded"
-					     src="img/person-placeholder-male.jpg">
+					     src="img/assets/person-placeholder-male.jpg">
 				</div>
 				<div class="text-center">
 					<h3>Thijs van Gerwen</h3>
@@ -66,7 +66,7 @@
 			<div class="col-3">
 				<div class="thumb-container">
 					<img class="img-responsive img-rounded"
-					     src="img/person-placeholder-male.jpg">
+					     src="img/assets/person-placeholder-male.jpg">
 				</div>
 				<div class="text-center">
 					<h3>Thijs van Gerwen</h3>
@@ -81,7 +81,7 @@
 			<div class="col-3">
 				<div class="thumb-container">
 					<img class="img-responsive img-rounded"
-					     src="img/person-placeholder-male.jpg">
+					     src="img/assets/person-placeholder-male.jpg">
 				</div>
 				<div class="text-center">
 					<h3>Thijs van Gerwen</h3>
