--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 
 	<div class="container" id="testimonials">
 		<div class="row">
+			<div class="col-12 text-center">
+				<h2>Zie wat onze studenten en leraren van de opleiding vinden</h2>
+			</div>
 			<div class="col-3">
 				<div class="thumb-container">
 					<img class="img-responsive img-rounded"
@@ -95,13 +98,10 @@
 		</div>
 	</div>
 
-	<div class="interlude">
-
-	</div>
-
 	<div class="container" id="feed">
 		<div class="row">
 			<div class="col-6 offset-3 text-center">
+				<h3>Of wordt deel van de conversatie</h3>
 				<a class="twitter-timeline" href="https://twitter.com/hashtag/fontysmedia"
 				   data-widget-id="510356443917074432">#fontysmedia Tweets</a>
 			</div>
