--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 	<div class="header animation-target" id="home">
 		<div class="header-inside animation-target">
-			<h1>Fontys OIM</h1>
+			<h1 id="threed">Fontys OIM</h1>
 		</div>
 	</div>
 
