--- a/index.html
+++ b/index.html
@@ -27,8 +27,20 @@
 
 	<div class="header animation-target" id="home">
 		<div class="header-inside animation-target">
-			<h1 id="threed">Fontys OIM</h1>
-		</div>
+			<div id="logo-css">
+				<div class="logo-box" id="rotate-1">
+					<div class="logo-line">
+						<h1>Media</h1>
+					</div>
+				</div>
+
+				<div class="logo-box" id="rotate-2">
+					<div class="logo-line">
+						<h1>Design</h1>
+					</div>
+				</div>
+			</div>
+	</div>
 	</div>
 
 	<div class="container" id="testimonials">
