Added amp to logo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<h1>Media</h1>
 					</div>
 				</div>
-
+				<h1>&amp;</h1>
 				<div class="logo-box" id="rotate-2">
 					<div class="logo-line">
 						<h1>Design</h1>
