added alt texts

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<div class="col-3">
 				<div class="thumb-container">
 					<img class="img-responsive img-rounded"
-					     src="img/assets/person-placeholder-male.jpg">
+					     src="img/assets/person-placeholder-male.jpg" alt="een plaatje van een man">
 				</div>
 				<div class="text-center">
 					<h3>Thijs van Gerwen</h3>
@@ -66,7 +66,7 @@
 			<div class="col-3">
 				<div class="thumb-container">
 					<img class="img-responsive img-rounded"
-					     src="img/assets/person-placeholder-male.jpg">
+					     src="img/assets/person-placeholder-male.jpg" alt="plaatje van een man">
 				</div>
 				<div class="text-center">
 					<h3>Thijs van Gerwen</h3>
@@ -81,7 +81,7 @@
 			<div class="col-3">
 				<div class="thumb-container">
 					<img class="img-responsive img-rounded"
-					     src="img/assets/person-placeholder-male.jpg">
+					     src="img/assets/person-placeholder-male.jpg" alt="nog een plaatje van een man">
 				</div>
 				<div class="text-center">
 					<h3>Thijs van Gerwen</h3>
@@ -96,7 +96,7 @@
 			<div class="col-3">
 				<div class="thumb-container">
 					<img class="img-responsive img-rounded"
-					     src="img/assets/person-placeholder-male.jpg">
+					     src="img/assets/person-placeholder-male.jpg" alt="laatste plaatje">
 				</div>
 				<div class="text-center">
 					<h3>Thijs van Gerwen</h3>
