Added the infamous green pixel

--- a/index.html
+++ b/index.html
@@ -1,179 +1,197 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>fontys OIM</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
-	<meta name="viewport" content="width=device-width, user-scalable=no">
-	<link rel="stylesheet" href="css/style.min.css">
-	<link rel="stylesheet" href="css/animations.min.css">
-	<link rel="shortcut icon" href="img/assets/favicon.ico" >
+    <title>fontys OIM</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/animations.min.css">
+    <link rel="shortcut icon" href="img/assets/favicon.ico">
+    <style>
+        .green-pixel {
+            position: fixed;
+            top: 200px;
+            left: 500px;
+            width: 1px;
+            height: 1px;
+            background-color: #0F0;
+            overflow: hidden;
+        }
+    </style>
 </head>
 <body>
 
-	<div id="background">
+<div id="background"></div>
 
-	</div>
+<a href="http://www.lookatmyhorsemyhorseisamazing.com/" class="green-pixel">
 
-	<nav>
-		<ul>
-			<li><a href="#home">Home</a></li>
-			<li><a href="#testimonials">Testimonials</a></li>
-			<li><a href="#feed">#fontysmedia</a></li>
-			<li><a href="#curriculum">Curriculum</a></li>
-		</ul>
-	</nav>
+</a>
 
-
-	<div class="header animation-target" id="home">
-		<div class="header-inside animation-target">
-			<div id="logo-css">
-				<div class="logo-box" id="rotate-1">
-					<div class="logo-line">
-						<h1>Media</h1>
-					</div>
-				</div>
-				<h1>&amp;</h1>
-				<div class="logo-box" id="rotate-2">
-					<div class="logo-line">
-						<h1>Design</h1>
-					</div>
-				</div>
-			</div>
-	</div>
-	</div>
-
-	<div class="container" id="testimonials">
-		<div class="row">
-			<div class="col-12 text-center">
-				<h2>Zie wat onze studenten en leraren van de opleiding vinden</h2>
-			</div>
-			<div class="col-3">
-				<div class="thumb-container">
-					<img class="img-responsive img-rounded"
-					     src="img/assets/person-placeholder-male.jpg" alt="een plaatje van een man">
-				</div>
-				<div class="text-center">
-					<h3>Thijs van Gerwen</h3>
-					<h5>Leraar ICT&amp;M</h5>
-
-					<p>Wij leren studenten hier niet hoe zij een website moeten maken, wij leren studenten hoe te denken
-					   als
-					   een ontwerper</p>
-				</div>
-
-			</div>
-			<div class="col-3">
-				<div class="thumb-container">
-					<img class="img-responsive img-rounded"
-					     src="img/assets/person-placeholder-male.jpg" alt="plaatje van een man">
-				</div>
-				<div class="text-center">
-					<h3>Thijs van Gerwen</h3>
-					<h5>Leraar ICT&amp;M</h5>
-
-					<p>Wij leren studenten hier niet hoe zij een website moeten maken, wij leren studenten hoe te denken
-					   als
-					   een ontwerper</p>
-				</div>
-
-			</div>
-			<div class="col-3">
-				<div class="thumb-container">
-					<img class="img-responsive img-rounded"
-					     src="img/assets/person-placeholder-male.jpg" alt="nog een plaatje van een man">
-				</div>
-				<div class="text-center">
-					<h3>Thijs van Gerwen</h3>
-					<h5>Leraar ICT&amp;M</h5>
-
-					<p>Wij leren studenten hier niet hoe zij een website moeten maken, wij leren studenten hoe te denken
-					   als
-					   een ontwerper</p>
-				</div>
-
-			</div>
-			<div class="col-3">
-				<div class="thumb-container">
-					<img class="img-responsive img-rounded"
-					     src="img/assets/person-placeholder-male.jpg" alt="laatste plaatje">
-				</div>
-				<div class="text-center">
-					<h3>Thijs van Gerwen</h3>
-					<h5>Leraar ICT&amp;M</h5>
-
-					<p>Wij leren studenten hier niet hoe zij een website moeten maken, wij leren studenten hoe te denken
-					   als
-					   een ontwerper</p>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="container" id="feed">
-		<div class="row">
-			<div class="col-6 offset-3 text-center">
-				<h3>Of wordt deel van de conversatie</h3>
-				<a class="twitter-timeline" href="https://twitter.com/hashtag/fontysmedia"
-				   data-widget-id="510356443917074432">#fontysmedia Tweets</a>
-			</div>
-		</div>
-	</div>
-
-	<div class="interlude">
-
-	</div>
-
-	<div class="container" id="curriculum">
-		<div class="row">
-			<div class="col-12">
-				<h1 class="text-center">Het Curriculum</h1>
-			</div>
-		</div>
-	</div>
+<nav>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#testimonials">Testimonials</a></li>
+        <li><a href="#feed">#fontysmedia</a></li>
+        <li><a href="#curriculum">Curriculum</a></li>
+    </ul>
+</nav>
 
 
-	<div class="footer">
-		<p><a href="http://www.terarion.com">Ontworpen door David Diks, in opdracht van afdeling ICT en Media op Fontys
-		                                     Hogescholen</a></p>
+<div class="header animation-target" id="home">
+    <div class="header-inside animation-target">
+        <div id="logo-css">
+            <div class="logo-box" id="rotate-1">
+                <div class="logo-line">
+                    <h1>Media</h1>
+                </div>
+            </div>
+            <h1>&amp;</h1>
 
-		<p>Deze site is geschreven met LESS, YUI-compressor en jQuery. HTML en CSS is gemaakt door mijzelf</p>
-	</div>
+            <div class="logo-box" id="rotate-2">
+                <div class="logo-line">
+                    <h1>Design</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
-	<script src="js/jquery.min.js"></script>
-	<script>
-		$(function () {
-			$('a[href*=#]:not([href=#])').click(function () {
-				if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
+<div class="container" id="testimonials">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h2>Zie wat onze studenten en leraren van de opleiding vinden</h2>
+        </div>
+        <div class="col-3">
+            <div class="thumb-container">
+                <img class="img-responsive img-rounded"
+                     src="img/assets/person-placeholder-male.jpg" alt="een plaatje van een man">
+            </div>
+            <div class="text-center">
+                <h3>Thijs van Gerwen</h3>
+                <h5>Leraar ICT&amp;M</h5>
 
-					var target = $(this.hash);
-					target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
-					if (target.length) {
-						$('html,body').animate({
-							scrollTop: target.offset().top
-						}, 1000);
-						return false;
-					}
-					else
-					{
-						return true;
-					}
-				}
-			});
-		});
-	</script>
+                <p>Wij leren studenten hier niet hoe zij een website moeten maken, wij leren studenten hoe te denken
+                    als
+                    een ontwerper</p>
+            </div>
 
-	<script>
-		!function (d, s, id) {
-			var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
-			if (!d.getElementById(id)) {
-				js = d.createElement(s);
-				js.id = id;
-				js.src = p + "://platform.twitter.com/widgets.js";
-				fjs.parentNode.insertBefore(js, fjs);
-			}
-		}(document, "script", "twitter-wjs");
-	</script>
+        </div>
+        <div class="col-3">
+            <div class="thumb-container">
+                <img class="img-responsive img-rounded"
+                     src="img/assets/person-placeholder-male.jpg" alt="plaatje van een man">
+            </div>
+            <div class="text-center">
+                <h3>Thijs van Gerwen</h3>
+                <h5>Leraar ICT&amp;M</h5>
+
+                <p>Wij leren studenten hier niet hoe zij een website moeten maken, wij leren studenten hoe te denken
+                    als
+                    een ontwerper</p>
+            </div>
+
+        </div>
+        <div class="col-3">
+            <div class="thumb-container">
+                <img class="img-responsive img-rounded"
+                     src="img/assets/person-placeholder-male.jpg" alt="nog een plaatje van een man">
+            </div>
+            <div class="text-center">
+                <h3>Thijs van Gerwen</h3>
+                <h5>Leraar ICT&amp;M</h5>
+
+                <p>Wij leren studenten hier niet hoe zij een website moeten maken, wij leren studenten hoe te denken
+                    als
+                    een ontwerper</p>
+            </div>
+
+        </div>
+        <div class="col-3">
+
+            <div class="thumb-container">
+                <img class="img-responsive img-rounded"
+                     src="img/assets/person-placeholder-male.jpg" alt="laatste plaatje">
+            </div>
+            <div class="text-center">
+                <h3>Thijs van Gerwen</h3>
+                <h5>Leraar ICT&amp;M</h5>
+
+                <p>Wij leren studenten hier niet hoe zij een website moeten maken, wij leren studenten hoe te denken
+                    als
+                    een ontwerper</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container" id="feed">
+    <div class="row">
+        <div class="col-6 offset-3 text-center">
+            <h3>Of wordt deel van de conversatie</h3>
+            <a class="twitter-timeline" href="https://twitter.com/hashtag/fontysmedia"
+               data-widget-id="510356443917074432">#fontysmedia Tweets</a>
+        </div>
+    </div>
+</div>
+
+<div class="interlude">
+
+</div>
+
+<div class="container" id="curriculum">
+    <div class="row">
+        <div class="col-12">
+            <h1 class="text-center">Het Curriculum</h1>
+        </div>
+    </div>
+</div>
+
+<div class="interlude">
+
+</div>
+
+
+<div class="footer">
+    <p><a href="http://www.terarion.com">Ontworpen door David Diks, in opdracht van afdeling ICT en Media op Fontys
+        Hogescholen</a></p>
+
+    <p>Deze site is geschreven met LESS, YUI-compressor en jQuery. HTML en CSS is gemaakt door mijzelf</p>
+</div>
+
+<script src="js/jquery.min.js"></script>
+<script>
+    $(function () {
+        $('a[href*=#]:not([href=#])').click(function () {
+            if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
+
+                var target = $(this.hash);
+                target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
+                if (target.length) {
+                    $('html,body').animate({
+                        scrollTop: target.offset().top
+                    }, 1000);
+                    return false;
+                }
+                else {
+                    return true;
+                }
+            }
+        });
+    });
+</script>
+
+<script>
+    !function (d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
+        if (!d.getElementById(id)) {
+            js = d.createElement(s);
+            js.id = id;
+            js.src = p + "://platform.twitter.com/widgets.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }
+    }(document, "script", "twitter-wjs");
+</script>
 
 </body>
 </html>
