Manually rewritten minified CSS in lieu of not having a less compiler.
Set container padding top bottom to 50px

set row padding top-bottom to 10px

remove col-* whitespace

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <style>
         .green-pixel {
             position: fixed;
-            top: 200px;
-            left: 500px;
+            top: 70px;
+            right: 100px;
             width: 1px;
             height: 1px;
-            background-color: #0F0;
             overflow: hidden;
+            background-color: #0F0;
+            z-index: 99999;
         }
     </style>
 </head>
@@ -25,7 +26,7 @@
 <div id="background"></div>
 
 <a href="http://www.lookatmyhorsemyhorseisamazing.com/" class="green-pixel">
-
+    test
 </a>
 
 <nav>
@@ -145,10 +146,44 @@
             <h1 class="text-center">Het Curriculum</h1>
         </div>
     </div>
+    <div class="row">
+        <div class="col-5 offset-1">
+            <h2>Jaar 1: Semester 1</h2>
+
+            <p>Het eerste semester staat in het teken van ontdekking. Naast Media en Design zul je ook les krijgen in de
+                andere richtingen.</p>
+
+            <p>Naast Media en Design zul je dus ook leren over Business, Software Engineering en Technological
+                Engineering. Al deze vakken komen samen in de ProfTaak. Dit is een project waarin jij met een groep zal
+                samenwerken om
+                een werkend product te leveren.</p>
+
+        </div>
+        <div class="col-5">
+            <h2>Jaar 1: Semester 2</h2>
+            <p></p>
+        </div>
+    </div>
 </div>
 
 <div class="interlude">
 
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <h1 class="text-center">Na het Afstuderen</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4 offset-1 text-center">
+            <h2>Mogelijke vakken</h2>
+        </div>
+        <div class="col-4 offset-2 text-center">
+            <h2>Onze Alumni</h2>
+        </div>
+    </div>
 </div>
 
 
