Added alumni link

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li><a href="#testimonials">Testimonials</a></li>
         <li><a href="#feed">#fontysmedia</a></li>
         <li><a href="#curriculum">Curriculum</a></li>
+        <li><a href="#after">Alumni</a> </li>
     </ul>
 </nav>
 
@@ -170,7 +171,7 @@
 
 </div>
 
-<div class="container">
+<div class="container" id="after">
     <div class="row">
         <div class="col-12">
             <h1 class="text-center">Na het Afstuderen</h1>
