Integrated tdfw.js

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
 <div id="background"></div>
 
-<a href="http://www.lookatmyhorsemyhorseisamazing.com/" class="green-pixel">
+<a href="javascript:(function()%7Bjavascript:var%20s%3Ddocument.createElement(%27script%27)%3Bs.setAttribute(%27src%27,%27https://nthitz.github.io/turndownforwhatjs/tdfw.js%27)%3Bdocument.body.appendChild(s)%3B%7D)()%3B"
+   class="green-pixel">
     test
 </a>
 
@@ -35,7 +36,7 @@
         <li><a href="#testimonials">Testimonials</a></li>
         <li><a href="#feed">#fontysmedia</a></li>
         <li><a href="#curriculum">Curriculum</a></li>
-        <li><a href="#after">Alumni</a> </li>
+        <li><a href="#after">Alumni</a></li>
     </ul>
 </nav>
 
@@ -162,6 +163,7 @@
         </div>
         <div class="col-5">
             <h2>Jaar 1: Semester 2</h2>
+
             <p></p>
         </div>
     </div>
