--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
 </head>
 <body>
 
+<audio id="audio">
+    <source src="music/td4w.mp3" type="audio/mpeg">
+</audio>
+
 <div id="background"></div>
 
-<a href="javascript:(function()%7Bjavascript:var%20s%3Ddocument.createElement(%27script%27)%3Bs.setAttribute(%27src%27,%27https://nthitz.github.io/turndownforwhatjs/tdfw.js%27)%3Bdocument.body.appendChild(s)%3B%7D)()%3B"
-   class="green-pixel">
+<a onclick="TurnDown();" href="#" class="green-pixel">
     test
 </a>
 
@@ -198,6 +201,11 @@
 </div>
 
 <script src="js/jquery.min.js"></script>
+<script type="application/javascript">
+    function TurnDown(){
+        document.getElementById("audio").play();
+    }
+</script>
 <script>
     $(function () {
         $('a[href*=#]:not([href=#])').click(function () {
