Added quotes to interludes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animations.min.css">
     <link rel="shortcut icon" href="img/assets/favicon.ico">
     <style>
@@ -142,7 +142,10 @@
 </div>
 
 <div class="interlude">
-
+	<blockquote>
+		<h1>OiM heeft mij nieuw inzicht in websites gegeven</h1>
+		<footer>David Diks, Eerstejaars</footer>
+	</blockquote>
 </div>
 
 <div class="container" id="curriculum">
@@ -173,7 +176,10 @@
 </div>
 
 <div class="interlude">
-
+	<blockquote>
+		<h1>Ik denk dat Media en Design mij een andere kijk op het leven hebben gegeven</h1>
+		<p>David Diks, Eerstejaars</p>
+	</blockquote>
 </div>
 
 <div class="container" id="after">
