Added logo designs

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/animations.min.css">
     <link rel="shortcut icon" href="img/assets/favicon.ico">
     <style>
@@ -45,21 +45,8 @@
 
 
 <div class="header animation-target" id="home">
-    <div class="header-inside animation-target">
-        <div id="logo-css">
-            <div class="logo-box" id="rotate-1">
-                <div class="logo-line">
-                    <h1>Media</h1>
-                </div>
-            </div>
-            <h1>&amp;</h1>
-
-            <div class="logo-box" id="rotate-2">
-                <div class="logo-line">
-                    <h1>Design</h1>
-                </div>
-            </div>
-        </div>
+    <div class="header-inside">
+       <img src="img/assets/Logo-wit-72.gif" class="text-center" style="width: 400px; height: auto;">
     </div>
 </div>
 
